2006-05-30  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	PR c/27718
	* c-typeck.c (c_expr_sizeof_type): Handle invalid types.

2006-05-30  Zdenek Dvorak <dvorakz@suse.cz>

	PR tree-optimization/27779
	* tree-data-ref.c (analyze_siv_subscript_cst_affine): Use
	initial_condition instead of CHREC_LEFT.

2006-05-30  Steven Bosscher  <stevenb.gcc@gmail.com>

	* config/m32r/m32r.h (DBX_OUTPUT_SOURCE_LINE): Fix type of begin_label.
	* config/m32r/initfini.c (__do_global_dtors, __do_global_ctors):
	Make prototypes ISO C90.

2006-05-30  Mircea Namolaru  <namolaru@il.ibm.com>
	    Leehod Baruch    <leehod.baruch@weizmann.ac.il>

	* see.c (see_analyze_one_def): Correct check.
	(see_get_extension_data): Check if extension is parallel.
	(see_get_extension_reg): Likewise.

2006-05-30  Uros Bizjak  <uros@kss-loka.si>

	PR target/27790
	* config/i386/i386.c (ix86_expand_int_vcond): Force cop0
	into register for (code == GTU).

2006-05-29  Roger Sayle  <roger@eyesopen.com>

	PR tree-optimization/24964
	* simplify-rtx.c (simplify_binary_operation_1): Add function comment.
	<MULT>: Minor clean-up.  Don't convert x*-1.0 into -x if we honor
	signaling NaNs.  Optimize -x*-x as x*x for all float modes, and
	abs(x)*abs(x) as x*x for scalar floating point modes.

2006-05-29  Sebastian Pop  <pop@cri.ensmp.fr>

	PR middle-end/27745
	* lambda-code.c (perfect_nestify): Don't copy statements
	in the inner loop: move them to the inner loop header.

2006-05-29  Diego Novillo  <dnovillo@redhat.com>

	PR 26237
	* c-tree.texi: Document OpenMP directives and clauses.

2006-05-29  Kazu Hirata  <kazu@codesourcery.com>

	* varasm.c (globalize_decl): Fix indentation.

2006-05-29  Diego Novillo  <dnovillo@redhat.com>

	PR 26242
	* doc/passes.texi: Add documentation for pass_vrp, pass_ipa_pta,
	pass_fre, pass_store_ccp, pass_copy_prop,
	pass_store_copy_prop, pass_merge_phi, pass_nrv,
	pass_return_slot, pass_object_size, pass_lim,
	pass_linear_transform, pass_empty_loop, pass_complete_unroll,