@@ -1,3 +1,8 @@
+2006-05-30  Dirk Mueller  <dmueller@suse.de>
+
+	PR c/27273
+	* gcc.dg/overflow-warn-5.c: New test.
+
 2006-05-30  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
 
 	PR c/27718
